# domain/recipeservice.go
@@ -104,3 +104,45 @@ func (s *RecipeService) UpdateRecipe(ctx context.Context, recipe Recipe) (Recipe
 
 	return s.store.UpdateRecipe(ctx, recipe)
 }
+
+func (s *RecipeService) AddIngredient(ctx context.Context, ingredient Ingredient) (Ingredient, error) {
+	if err := s.validateIngredient(ingredient); err != nil {
+		return Ingredient{}, err
+	}
+	return s.store.CreateIngredient(ctx, ingredient)
+}
+
+func (s *RecipeService) UpdateIngredient(ctx context.Context, ingredient Ingredient) (Ingredient, error) {
+	if err := s.validateIngredient(ingredient); err != nil {
+		return Ingredient{}, err
+	}
+	if err := s.store.UpdateIngredient(ctx, ingredient); err != nil {
+		return Ingredient{}, err
+	}
+	return ingredient, nil
+}
+
+func (s *RecipeService) DeleteIngredient(ctx context.Context, id int64) error {
+	return s.store.DeleteIngredient(ctx, id)
+}
+
+func (s *RecipeService) AddUnit(ctx context.Context, unit Unit) (Unit, error) {
+	if err := s.validateUnit(unit); err != nil {
+		return Unit{}, err
+	}
+	return s.store.CreateUnit(ctx, unit)
+}
+
+func (s *RecipeService) UpdateUnit(ctx context.Context, unit Unit) (Unit, error) {
+	if err := s.validateUnit(unit); err != nil {
+		return Unit{}, err
+	}
+	if err := s.store.UpdateUnit(ctx, unit); err != nil {
+		return Unit{}, err
+	}
+	return unit, nil
+}
+
+func (s *RecipeService) DeleteUnit(ctx context.Context, id int64) error {
+	return s.store.DeleteUnit(ctx, id)
+}
